# XPAutoThrottle

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  build.sh  build_all.py  build_linux.sh  build_windows.bat  install.sh  linux_exports.txt  mac_exports.txt  test_cross_platform.py  win_exports.def
.github/workflows/: build.yml
src/: plugin.cpp  plugin.h
